# eval

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: adapter-api.md  pr-gate.md  quickstart.md  reviewer-framework.md  suggestions.md  trending.md  ts-migration.md
examples/full-pipeline/: run.py
examples/generation-eval/: run.py
examples/retrieval-eval/: run.py
src/synapt_eval/: __init__.py  aggregation.py  types.py
src/synapt_eval/actions/: __init__.py  __main__.py  pr_gate.py
src/synapt_eval/adapters/: __init__.py  fixture_loader.py  generation_adapter.py  judge_adapter.py  retrieval_adapter.py
src/synapt_eval/cli/: __init__.py  trending.py
src/synapt_eval/judges/: __init__.py  anthropic.py  openai.py  parsing.py
src/synapt_eval/report_card/: __init__.py  compose.py  json_output.py  markdown.py  types.py
src/synapt_eval/reviewer/: __init__.py  bridge.py  chain.py  framework.py  protocol.py  types.py
src/synapt_eval/runner/: __init__.py  edge_cases.py  eval_runner.py  generation.py  orchestration.py  retrieval.py
tests/unit/: test_adapter_exports.py  test_aggregation.py  test_judge.py  test_orchestration.py  test_pr_gate_action.py  test_report_card.py  test_reviewer.py  test_runner_generation.py  test_runner_retrieval.py  test_scoring.py  test_suggestion_engine.py  test_trending.py  test_types.py
ts/: jsr.json  package-lock.json  package.json  tsconfig.json
ts/src/: mod.ts  types.ts
ts/tests/: report_card.test.ts  reviewer.test.ts  scoring.test.ts  suggestion_engine.test.ts
(+44 files in other folders)
