[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapt-eval"
version = "0.1.0"
description = "Domain-agnostic eval framework for AI applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Synapt", email = "hello@synapt.dev" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
judges = ["openai>=1.0", "anthropic>=0.20"]

[project.scripts]
synapt-eval = "synapt_eval.cli:cli_entry"

[project.urls]
Homepage = "https://github.com/synapt-dev/eval"
Repository = "https://github.com/synapt-dev/eval"
Issues = "https://github.com/synapt-dev/eval/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/synapt_eval"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
